src/objects/mandate__c.object
<CustomObject>
    <fields>
        <fullName>BIC_code__c</fullName>
        <formula>Billing_Account__r.UM_BankAccountNumberBic__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BIC code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Number__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Billing_Account__r.Id ,Billing_Account__r.LG_BillingAccountNumber__c,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <label>Billing Account</label>
        <referenceTo>csconta__Billing_Account__c</referenceTo>
        <relationshipLabel>Mandates</relationshipLabel>
        <relationshipName>Mandates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Creditor_ID__c</fullName>
        <formula>$Setup.Mandate_Creditor_ID_Settings__c.Creditor_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creditor ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBAN__c</fullName>
        <formula>Billing_Account__r.LG_BankAccountNumberIBAN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IBAN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_date__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>Issue date of the mandate, when the customer signed</description>
        <label>Issue date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Mandate_reference__c</fullName>
        <label>Legacy_Mandate_reference #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Deactivated</fullName>
                </value>
                <value>
                    <fullName>New, send to customer</fullName>
                    <default>true</default>
                    <label>New, send to customer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Termination_date__c</fullName>
        <description>Date the mandate loses its validity.</description>
        <label>Termination date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type_of_mandate__c</fullName>
        <label>Type of mandate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Recurring</fullName>
                    <default>true</default>
                    <label>Recurring</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>customer_signature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>customer signature received?</label>
        <type>Checkbox</type>
    </fields>
    <label>mandate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Billing_Account__c</columns>
        <columns>Legacy_Mandate_reference__c</columns>
        <columns>IBAN__c</columns>
        <columns>Issue_date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>UM-0006{0000000000}</displayFormat>
        <label>Mandate Reference #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mandates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>